added includes for AllWoodTypes: woodBlanks|stains
