# src/controllers/products/woodTypes/allWoodTypes.ts
@@ -1,13 +1,33 @@
-import { Controller, Get, Route, Tags } from "tsoa";
+import { Controller, Get, Query, Route, Tags } from "tsoa";
 import { db } from "../../../db";
+import { Prisma } from "@prisma/client";
 
 @Route("/woodtypes")
 export class AllWoodTypes extends Controller {
     @Get("/all")
     @Tags("get")
-    public async allWoodTypes(): Promise<unknown[]> {
+    public async allWoodTypes(
+        @Query() includeBlanks: boolean = false,
+        @Query() includeStains: boolean = false,
+    ): Promise<unknown[]> {
+        const vars: Prisma.WoodTypeInclude = {
+            images: { include: { imageLink: true } },
+        };
+
+        if (includeBlanks) {
+            vars.woodBlanks = {
+                include: { images: { include: { imageLink: true } } },
+            };
+        }
+
+        if (includeStains) {
+            vars.stains = {
+                include: { images: { include: { imageLink: true } } },
+            };
+        }
+
         const woodTypes = await db.woodType.findMany({
-            include: { images: { include: { imageLink: true } } },
+            include: vars,
         });
 
         return woodTypes;
